#49 - 비효율적인 getCodeTree 메서드 수정
처음부터 끝까지 allCodes를 전부 뒤져서 childeren을 찾는 것보다
Map을 통해 부모와 자식을 정해 놓고, parent에 해당하는 children만 선택하는 것이 효율적